Fixed wrapping in a little better way.
Set white-space: nowrap; so it just pushed out width instead of
wrapping.

--- a/client-web/src/css/index.css
+++ b/client-web/src/css/index.css
@@ -293,6 +293,7 @@ body {
 
 .activity_map_name{
   font:var(--font-activity-map-name);
+  white-space: nowrap;
 }
 
 .activity_mode_name {
